Implement custom Javadoc task for configuration cache compatibility
Use `CommandLineArgumentProviders` to introduce the necessary laziness.